<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/settings_title"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp"
        android:text="@string/settings_changes" />

    <TextView
        android:id="@+id/text_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_settings"
        android:layout_marginStart="21dp"
        android:layout_marginTop="47dp"
        android:text="@string/settings_lang" />

    <Spinner
        android:id="@+id/spinner_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/text_settings"
        android:layout_alignStart="@+id/text_lang"
        android:layout_below="@+id/text_lang"
        android:layout_toStartOf="@+id/text_settings" />
</RelativeLayout>